fix up theme.scss and fix up badges overflow (fixes #1)

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -84,6 +84,10 @@ h6 {
   font-size: .75em;
 }
 
+span.badge {
+  white-space: normal !important;
+  text-align: center !important;
+}
 img {
   display: inline-block;
   margin: 0 auto;
